--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <div class="w-full">
   <h4 class=" text-4xl">StimulusReflex Example</h4><br>
+  <h4 class=" text-4xl">With Jenkins CICD</h4><br>
 
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
